     or use the :parser: option of the `"include" directive`_ to include
     an XML file in a rST document.

  `nodes.Element.validate()`
     Raise `nodes.ValidationError` if the element does not comply with
     the `Docutils Document Model`_.
     Provisional.

Removed objects
  `docutils.core.Publisher.setup_option_parser()`
     internal, obsolete,
  `docutils.nodes.Element.set_class()`
     obsolete, append to Element['classes'] directly,
  `docutils.parsers.rst.directives.tables.CSVTable.decode_from_csv()`
     not required with Python 3,
  `docutils.parsers.rst.directives.tables.CSVTable.encode_from_csv()`
     not required with Python 3,
  `docutils.transforms.writer_aux.Compound`
     not used since Dec 2010,
  `docutils.utils.error_reporting`
     obsolete in Python 3,
  `docutils.utils.Reporter.set_conditions()`
     obsolete, set attributes via configuration settings or directly.

Removed localisations:
  Mistranslations of the "admonition" directive name:
     Use "advies" (af), "varsel" (da), "warnhinweis" (de), "aviso" (es),
     "sciigo" (eo), "annonce" (fr), "avviso" (it), "advies" (nl),
     "zauważenie" (pl) (introduced in Docutils 0.21)
     or the English name "admonition".

Removed files
  ``tools/rst2odt_prepstyles.py``
     Obsoleted by `docutils.writers.odf_odt.prepstyles`.

Bugfixes and improvements (see HISTORY_).

.. _Docutils Document Model:
.. _Docutils XML: docs/ref/doctree.html


Release 0.21.2 (2024-04-23)
===========================

* Document Tree / Docutils DTD

  - Remove declaration of unsupported element <info>.
  - Remove <decoration> from content declaration of <section> elements.

* Declare support for languages Georgian and Catalan (Valencian).

* Fix test failures.


Release 0.21.1 (2024-04-10)
===========================

Add missing metadata files to sdist.
No changes to the code.


Release 0.21 (2024-04-09)
=========================

* General:

  - Drop support for Python 3.7 and 3.8.
